--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,7 @@ body {
 
 .nav-link .button {
   padding: 8px 34px;
-  min-width: 160px;
+  max-width: 168px;
 }
 
 .search-hotels .button {
@@ -544,7 +544,7 @@ header {
   display: block;
   text-align: center;
   margin: 0;
-  padding: 96px 258px 104px;
+  padding: 96px 258px 103px;
 }
 
 .subscribe.main {
@@ -696,7 +696,7 @@ header {
   padding: 0;
   border: 0;
   box-sizing: border-box;
-  padding: 35px 70px 70px 70px;
+  padding: 35px 70px 65px 70px;
 }
 
 .inner-header-title {
@@ -713,7 +713,7 @@ header {
   align-items: center;
   margin: 0;
   padding: 0;
-  margin-bottom: 37px;
+  margin-bottom: 39px;
   list-style: none;
 }
 
@@ -764,13 +764,14 @@ header {
   display: flex;
   width: 1060px;
   margin: 0;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .catalog-filter {
+  display: flex;
   margin: 0;
   padding: 0;
-  min-width: 150px;
+  /* min-width: 150px; */
   min-height: 157px;
   border: none;
   margin-right: 70px;
@@ -778,12 +779,13 @@ header {
 
 .catalog-filter-title {
   font-weight: 700;
+  display: flex;
   font-size: 20px;
   line-height: 24px;
   text-transform: capitalize;
   margin: 0;
   padding: 0;
-  margin-bottom: 32px;
+  margin-bottom: 33px;
 }
 
 .catalog-filter-list {
@@ -798,7 +800,7 @@ header {
 }
 
 .house-filter {
-  margin-right: 140px;
+  margin-right: 152px;
 }
 
 .filter-item {
@@ -806,7 +808,7 @@ header {
 }
 
 .filter-item:not(:last-child) {
-  margin-bottom: 16px;
+  margin-bottom: 15px;
 }
 
 .control {
@@ -876,6 +878,7 @@ header {
 }
 
 .price-filter {
+  display: block;
   margin: 0;
   margin-right: 70px;
   width: 288px;
@@ -883,8 +886,8 @@ header {
 
 .wprapper-price {
   display: flex;
-  margin-bottom: 36px;
-  justify-content: flex-end;
+  margin-bottom: 44px;
+  /* justify-content: flex-end; */
 }
 
 .wprapper-price .control-input {
@@ -893,10 +896,12 @@ header {
   font-size: 18px;
   background: #f2f2f2;
   border: 3px solid transparent;
-  padding: 12px 20px;
+  padding: 14px 18px;
   width: 143px;
   height: 48px;
   color: #000000;
+  font-weight: 700;
+  line-height: 24px;
 }
 
 .wprapper-price .control-input:hover {
@@ -951,7 +956,13 @@ input[type="number"]:focus {
   position: relative;
   height: 4px;
   margin-bottom: 13px;
-  margin-top: 43px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.slider {
+  position: relative;
+  height: 4px;
+  margin-bottom: 13px;
   background-color: rgba(255, 255, 255, 0.3);
 }
 
@@ -976,15 +987,12 @@ input[type="number"]:focus {
 .toggle-min {
   top: -8px;
   left: -10px;
-  cursor: pointer;
 }
 
 .toggle-max {
   top: -8px;
-  right: -13px;
-  cursor: pointer;
+  right: -11px;
 }
-
 .range-toggle:active {
   border: 2px solid #83b3d3;
 }
@@ -992,13 +1000,24 @@ input[type="number"]:focus {
   outline: 3px solid #83b3d3;
 }
 
-.button-search {
+/* .button-search {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   padding: 0;
   height: 160px;
   gap: 34px;
+  box-sizing: border-box;
+} */
+
+.button-search {
+  display: flex;
+  flex-wrap: wrap;
+  align-self: flex-start;
+  flex-direction: column;
+  padding: 0;
+  padding-top: 57px;
+  gap: 33px;
   box-sizing: border-box;
 }
 
@@ -1021,12 +1040,11 @@ input[type="number"]:focus {
   text-transform: uppercase;
   box-sizing: border-box;
   margin-bottom: 40px;
-  flex-wrap: wrap;
 }
 
 .result-search .title {
   margin: 0;
-  margin-right: 199px;
+  margin-right: 200px;
   text-transform: uppercase;
   max-width: 353px;
 }
@@ -1042,7 +1060,7 @@ input[type="number"]:focus {
   border-radius: 4px;
   background-image: url(../images/service-icons/arrow.svg);
   background-repeat: no-repeat;
-  background-position: center right 16px;
+  background-position: center right 17px;
   font-family: inherit;
   font-size: 18px;
   line-height: 21px;
@@ -1071,7 +1089,7 @@ input[type="number"]:focus {
 
 .view {
   display: flex;
-  padding: 14px 13px 16px 15px;
+  padding: 16px 14px;
   align-items: center;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
@@ -1100,7 +1118,7 @@ input[type="number"]:focus {
   margin: 0;
   padding: 0;
   margin-bottom: 40px;
-  padding-bottom: 38px;
+  padding-bottom: 39px;
   box-sizing: border-box;
   border-bottom: 1px solid #e6e6e6;
   list-style: none;
