:heavy_check_mark: Сборка #8

--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -42,7 +42,7 @@ body {
 
 .main-container {
   margin: 0;
-  flex-grow: 1;description
+  flex-grow: 1;
 }
 
 .page-container {
@@ -53,18 +53,6 @@ body {
   display: flex;
   flex-direction: column;
   background: #ffffff;
-}
-
-.navigation-user,
-.advantages-service,
-.advantages-list,
-.breadcrumbs,
-.catalog-filter-list,
-.cards,
-.pagination,
-.list-social,
-.nav-list {
-  list-style: none;
 }
 
 .text {
@@ -103,11 +91,11 @@ body {
 }
 
 .button:focus {
-  background: rgba (255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .button:disabled {
-  background: rgba (229, 229, 229, 1);
+  background-color: rgba(229, 229, 229, 1);
   pointer-events: none;
 }
 
@@ -118,7 +106,7 @@ body {
 
 .nav-link .button {
   padding: 8px 34px;
-  min-width: 160px;
+  max-width: 168px;
 }
 
 .search-hotels .button {
@@ -220,7 +208,6 @@ body {
   padding: 8px 50px;
 }
 
-.
 /* Шапка */
 .page-header {
   display: flex;
@@ -251,6 +238,7 @@ body {
   margin: 0;
   padding: 0;
   align-items: center;
+  list-style: none;
 }
 
 .navigation-link {
@@ -283,6 +271,7 @@ body {
   margin: 0;
   margin-left: auto;
   padding: 0;
+  list-style: none;
 }
 
 .nav-user {
@@ -294,7 +283,7 @@ body {
 }
 
 .nav-user.search {
-  background-image: url(../images/search.svg);
+  background-image: url(../images/header/search.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 18px 18px;
@@ -302,7 +291,7 @@ body {
 }
 .nav-user.favorites {
   margin-right: 21px;
-  background-image: url(../images/heart.svg);
+  background-image: url(../images/header/heart.svg);
   background-repeat: no-repeat;
   position: relative;
   background-position: center;
@@ -412,6 +401,7 @@ header {
   padding: 0;
   text-align: center;
   margin: 0;
+  list-style: none;
 }
 
 .dark-background {
@@ -453,8 +443,7 @@ header {
   padding: 0;
   font-weight: 400;
   font-size: 22px;
-  }
-
+}
 
 .dark-background p {
   color: #ffffff;
@@ -491,6 +480,7 @@ header {
   padding: 0;
   text-align: center;
   margin: 0 auto;
+  list-style: none;
 }
 
 .service-container {
@@ -554,7 +544,7 @@ header {
   display: block;
   text-align: center;
   margin: 0;
-  padding: 96px 258px 104px;
+  padding: 96px 258px 103px;
 }
 
 .subscribe.main {
@@ -672,14 +662,17 @@ header {
   margin-right: 42px;
   justify-content: center;
   align-items: center;
+  list-style: none;
 }
 
-.item-social {
+.social-button {
   display: flex;
+  box-sizing: border-box;
   width: 47px;
   height: 40px;
   align-items: center;
   justify-content: center;
+  padding: 0 10px;
 }
 
 .social-button:hover path,
@@ -703,7 +696,7 @@ header {
   padding: 0;
   border: 0;
   box-sizing: border-box;
-  padding: 35px 70px 70px 70px;
+  padding: 35px 70px 65px 70px;
 }
 
 .inner-header-title {
@@ -720,7 +713,8 @@ header {
   align-items: center;
   margin: 0;
   padding: 0;
-  margin-bottom: 37px;
+  margin-bottom: 39px;
+  list-style: none;
 }
 
 .breadcrumbs-item {
@@ -755,7 +749,7 @@ header {
   display: block;
   width: 8px;
   height: 21px;
-  background-image: url("../images/service-icons/afurther.svg");
+  background-image: url("../images/service-icons/further.svg");
   background-repeat: no-repeat;
   position: relative;
   left: 10px;
@@ -770,13 +764,14 @@ header {
   display: flex;
   width: 1060px;
   margin: 0;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .catalog-filter {
+  display: flex;
   margin: 0;
   padding: 0;
-  min-width: 150px;
+  /* min-width: 150px; */
   min-height: 157px;
   border: none;
   margin-right: 70px;
@@ -784,18 +779,20 @@ header {
 
 .catalog-filter-title {
   font-weight: 700;
+  display: flex;
   font-size: 20px;
   line-height: 24px;
   text-transform: capitalize;
   margin: 0;
   padding: 0;
-  margin-bottom: 32px;
+  margin-bottom: 33px;
 }
 
 .catalog-filter-list {
   margin: 0;
   padding: 0;
   line-height: 23px;
+  list-style: none;
 }
 
 .control-label {
@@ -803,7 +800,7 @@ header {
 }
 
 .house-filter {
-  margin-right: 140px;
+  margin-right: 152px;
 }
 
 .filter-item {
@@ -811,7 +808,7 @@ header {
 }
 
 .filter-item:not(:last-child) {
-  margin-bottom: 16px;
+  margin-bottom: 15px;
 }
 
 .control {
@@ -881,6 +878,7 @@ header {
 }
 
 .price-filter {
+  display: block;
   margin: 0;
   margin-right: 70px;
   width: 288px;
@@ -888,8 +886,8 @@ header {
 
 .wprapper-price {
   display: flex;
-  margin-bottom: 36px;
-  justify-content: flex-end;
+  margin-bottom: 44px;
+  /* justify-content: flex-end; */
 }
 
 .wprapper-price .control-input {
@@ -898,15 +896,17 @@ header {
   font-size: 18px;
   background: #f2f2f2;
   border: 3px solid transparent;
-  padding: 12px 20px;
+  padding: 14px 18px;
   width: 143px;
   height: 48px;
   color: #000000;
+  font-weight: 700;
+  line-height: 24px;
 }
 
 .wprapper-price .control-input:hover {
   background-color: #e6e6e6;
-  outline: none
+  outline: none;
 }
 
 .wprapper-price .control-input:focus-visible {
@@ -937,23 +937,32 @@ header {
   right: 20px;
 }
 
-.min-price::-webkit-outer-spin-button,
-.min-price::-webkit-inner-spin-button {
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-.max-price::-webkit-outer-spin-button,
-.max-price::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input[type="number"]:hover,
+input[type="number"]:focus {
+  -moz-appearance: number-input;
 }
 
 .slider {
   position: relative;
   height: 4px;
   margin-bottom: 13px;
-  margin-top: 43px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.slider {
+  position: relative;
+  height: 4px;
+  margin-bottom: 13px;
   background-color: rgba(255, 255, 255, 0.3);
 }
 
@@ -978,15 +987,12 @@ header {
 .toggle-min {
   top: -8px;
   left: -10px;
-  cursor: pointer;
 }
 
 .toggle-max {
   top: -8px;
-  right: -13px;
-  cursor: pointer;
+  right: -11px;
 }
-
 .range-toggle:active {
   border: 2px solid #83b3d3;
 }
@@ -994,13 +1000,24 @@ header {
   outline: 3px solid #83b3d3;
 }
 
-.button-search {
+/* .button-search {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   padding: 0;
   height: 160px;
   gap: 34px;
+  box-sizing: border-box;
+} */
+
+.button-search {
+  display: flex;
+  flex-wrap: wrap;
+  align-self: flex-start;
+  flex-direction: column;
+  padding: 0;
+  padding-top: 57px;
+  gap: 33px;
   box-sizing: border-box;
 }
 
@@ -1023,12 +1040,11 @@ header {
   text-transform: uppercase;
   box-sizing: border-box;
   margin-bottom: 40px;
-  flex-wrap: wrap;
 }
 
 .result-search .title {
   margin: 0;
-  margin-right: 199px;
+  margin-right: 200px;
   text-transform: uppercase;
   max-width: 353px;
 }
@@ -1044,7 +1060,7 @@ header {
   border-radius: 4px;
   background-image: url(../images/service-icons/arrow.svg);
   background-repeat: no-repeat;
-  background-position: center right 16px;
+  background-position: center right 17px;
   font-family: inherit;
   font-size: 18px;
   line-height: 21px;
@@ -1073,25 +1089,23 @@ header {
 
 .view {
   display: flex;
-  padding: 14px 13px 16px 15px;
+  padding: 16px 14px;
   align-items: center;
-  border: 2px solid #E5E5E5;
+  border: 2px solid #e5e5e5;
   border-radius: 4px;
   box-sizing: border-box;
-  }
+}
 
 .active .view {
   border: 2px solid #000;
-
 }
-
 
 .view:hover {
   border: 2px solid #000;
 }
 
 .view:focus-visible {
-  outline: 2px solid #68A2CA;
+  outline: 2px solid #68a2ca;
   outline-offset: -2px;
 }
 
@@ -1104,9 +1118,10 @@ header {
   margin: 0;
   padding: 0;
   margin-bottom: 40px;
-  padding-bottom: 38px;
+  padding-bottom: 39px;
   box-sizing: border-box;
   border-bottom: 1px solid #e6e6e6;
+  list-style: none;
 }
 
 .card {
@@ -1174,26 +1189,6 @@ header {
   justify-self: end;
 }
 
-/* .cards::after {
-  display: block;
-  height: 1px;
-  width: 100%;
-  content: "";
-  margin: 0;
-  background-color: #e6e6e6;
-  margin-bottom: 40px;
-} */
-/* ДЛЯ ХЕДЕРА для черточки
-.pagination {
-  display: flex;
-  max-width: 1060px;
-  margin: 0;
-  padding: 0;
-  flex-wrap: wrap;
-  border-top: 1px solid #e6e6e6;
-  padding-top: 40px;
-  box-sizing: border-box;
-} */
 /* Пагинация */
 
 .pagination {
@@ -1203,6 +1198,7 @@ header {
   padding: 0;
   flex-wrap: wrap;
   box-sizing: border-box;
+  list-style: none;
 }
 
 .pagination-item {
@@ -1283,6 +1279,9 @@ header {
   width: 100%;
   height: 100%;
   background: rgba(242, 242, 242, 0.8);
+}
+
+.modal-container-close {
   display: none;
 }
 
@@ -1291,16 +1290,24 @@ header {
   margin: auto;
   padding: 64px 70px;
   background-color: #ffffff;
-  width: 448px;
+  width: 577px;
+  border-radius: 30px;
+  color: #000;
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
 }
 
+.modal-form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 23px;
+}
 .modal-title {
   font-size: 30px;
   font-style: normal;
   font-weight: 700;
   line-height: 36px;
   text-transform: uppercase;
-  color: rgba (0, 0, 0, 1);
+  color: rgba(0, 0, 0, 1);
   margin: 0;
   padding: 0;
   margin-bottom: 64px;
@@ -1308,21 +1315,219 @@ header {
 
 .close-button {
   position: absolute;
-  padding: 0;
-  top: 0;
-  right: 0;
-  width: 56px;
-  height: 44px;
-  background-color: #ffffff;
+  top: 63px;
+  right: 52px;
+  height: 52px;
+  width: 52px;
+  background-color: #f2f2f2;
   border: none;
-  background-image: url("../images/service-icons/close.svg");
+  background-image: url("../images/modal/close.svg");
   background-repeat: no-repeat;
-  background-position: center right 10px;
+  background-position: center center;
+  border-radius: 50%;
   cursor: pointer;
 }
 
-.field {
-  background-image: url("../images/service-icons/calendar.svg");
+.modal-label {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: capitalize;
+}
+
+.field-modal {
+  display: flex;
+  box-sizing: border-box;
+  color: #000;
+  font-family: PT Sans;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  border: 0;
+  background-color: #f2f2f2;
+  border-radius: 4px;
+  padding: 12px 20px;
+  min-height: 39px;
+  width: 440px;
+  background-image: url("../images/modal/calendar.svg");
   background-repeat: no-repeat;
-  background-position: center right 20px;
+  background-position: center right 23px;
+}
+
+.field-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.modal-info {
+  margin: 0;
+  margin-left: 137px;
+  margin-top: 3px;
+  font-size: 16px;
+  line-height: 21px;
+  color: #333333;
+  padding: 0 20px;
+}
+
+.error {
+  color: #ff5757;
+}
+
+.modal-form-date {
+  width: 100%;
+}
+
+.modal-guests {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 88px;
+  margin-bottom: 24px;
+}
+
+.amount-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  gap: 82px;
+}
+
+.amount-wrapper.adult {
+  width: 247px;
+  gap: 46px;
+}
+
+.amount-guests {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 4px;
+  background: #f2f2f2;
+  min-width: 110px;
+}
+
+.input-guests {
+  display: flex;
+  width: 31px;
+  height: 48px;
+  box-sizing: border-box;
+  padding: 14px 10px;
+  font-family: PT Sans;
+  justify-content: center;
+  align-items: center;
+  background: #f2f2f2;
+  border: none;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 20px;
+}
+
+.amount {
+  padding: 0;
+  margin: 0;
+  border: none;
+  cursor: pointer;
+  padding: 14px 10px;
+}
+
+.modal-button.select {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  box-sizing: border-box;
+  font-family: PT Sans;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 24px;
+  font-weight: 700;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 18px 77px;
+  border: 0;
+  margin: 0;
+  border-radius: 10px;
+}
+
+.minus:hover path {
+  fill: #000;
+  fill-opacity: 1;
+}
+.minus:focus-visible {
+  outline: 3px solid #82b3d3;
+  border-radius: 4px;
+}
+.minus:active path {
+  fill-opacity: 0.2;
+}
+
+.tooltip {
+  position: absolute;
+  margin-top: -7px;
+  margin-left: 0;
+  width: 16px;
+  height: 16px;
+}
+
+.tooltip-toggle {
+  position: absolute;
+  padding: 0;
+  border: none;
+  display: block;
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  background-color: #83b3d3;
+  left: 59px;
+}
+
+.tooltip-info {
+  padding: 7px 12px;
+  width: 26px;
+  height: 26px;
+  box-sizing: border-box;
+  object-fit: contain;
+  cursor: pointer;
+}
+
+.tooltip-popup::before {
+  position: absolute;
+  content: "";
+  top: -5px;
+  left: 110px;
+  transform: translateX(50%) rotate(45deg);
+  width: 19px;
+  height: 19px;
+  background-color: #333;
+}
+
+.tooltip-popup {
+  position: absolute;
+  padding: 19px 18px 22px 22px;
+  box-sizing: border-box;
+  top: 40px;
+  left: -56px;
+  width: 256px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+  border-radius: 10px;
+  background-color: #333;
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.3);
+  display: none;
+}
+
+.tooltip-toggle:hover + .tooltip-popup,
+.tooltip-toggle:focus + .tooltip-popup {
+  display: block;
+  padding: 17px 16px;
 }
