--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -353,15 +353,40 @@ header {
 .intro {
   display: block;
   margin: auto;
+  padding: 69px;
+  margin-bottom: 21px;
+}
+
+.intro .title {
+  margin-bottom: 25px;
+  padding: 0 123px;
+}
+
+/* .intro {
+  display: block;
+  margin: auto;
   padding: 69px 274px;
   margin-bottom: 21px;
 }
 
 .intro .title {
   margin-bottom: 25px;
-}
+} */
 
 /* advantages */
+
+/* .advantages-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 181px;
+  width: 230px;
+  margin: 0;
+  padding: 102px 85px;
+  margin-top: auto;
+  margin-bottom: auto;
+  justify-content: center;
+  align-items: center;
+} */
 
 .advantages-container {
   display: flex;
